fix: Fixed modal window on mobile && Aligned top-up buttons && Added animation for arrow

--- a/assets/scss/profile-card.scss
+++ b/assets/scss/profile-card.scss
@@ -8,9 +8,9 @@
   cursor: pointer;
   margin-bottom: 23px;
 
-  &:nth-child(2n+1){
-    margin-right: 29px;
-  }
+  //&:nth-child(2n+1){
+  //  margin-right: 29px;
+  //}
 
   &:hover {
     color: $btn-full-color;
